crates/jsonschema-macros/tests/ui/invalid_dependencies_array_element.rs
#[jsonschema::validator(
    schema = r#"{"dependencies":{"foo":[42]}}"#,
    draft = referencing::Draft::Draft7
)]
struct InvalidDependenciesArrayElementValidator;

fn main() {}
